syntax = "proto3";

package test.api.v1;

option go_package = "github.com/cjermain/protoc-gen-pydantic/test/api";

message Message {
  string first_name = 1;
  string last_name = 2;
}

message Empty {}
